# homelab

./: .gitignore  README.md  devspace.yaml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: build_and_push.yaml
api/: Dockerfile  Dockerfile.dev  db.py  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 19b9821b8116_initial_migration.py  a25ae7d54e70_add_iotdevice_table.py  fd7030ac4b57_added_iot_device_setting.py
api/api/models/: iot_device.py  iot_device_setting.py  log_entry.py
api/api/routers/: iot_device_settings.py  iot_devices.py  logs.py
api/api/utils/: crud.py  iot.py
app/: Dockerfile  Dockerfile.dev  main.py  package-lock.json  package.json  pyproject.toml
app/pages/: home.py  iot.py
app/src/routes/iot/: +page.svelte
cli/: constants.py  main.py  server.py
cli/utils/: monitoring.py  server.py  server_interface.py  ssh.py
data/: servers.json
k8s-infra/: devspace.yaml
k8s-infra/core/: Chart.yaml  values.yaml
k8s-infra/core/templates/: cluster-issuer.yaml  kubernetes-dashboard-certificate.yaml  kubernetes-dashboard-ingress.yaml
k8s-infra/external-ingresses/: Chart.yaml  values.yaml
k8s-infra/external-ingresses/templates/: ingresses.yaml
k8s-infra/hoarder/: Chart.yaml  values.yaml
k8s-infra/hoarder/templates/: configuration.yaml  ingress.yaml  meilisearch-deployment.yaml  secrets.yaml  web-deployment.yaml
vue-app/: README.md  package-lock.json  package.json
vue-app/src/: App.vue
vue-app/src/assets/: _colors.scss  _forms.scss  _modal.scss  main.scss
(+8 files in other folders)
