[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Emma Knospe <emma@emmaknospe.dev>"]
readme = "README.md"
packages = [
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
nicegui = "^1.4.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
